# Algebra-SHA256-Engine

./: BitcoinSSD.uproject  Cargo.toml  README.md  aci_resolver.py  ghostmint_stage1.go  ghostmint_stage2.go  launch_dashboard.sh  resolve_nonce_from_matrix.py  sha256_cat_collapse.py  sha256_structural_pow.py  start_dashboard.sh  symbolic_sha256_phase1.json  symbolic_sha256_phase1.py  z3_pow_resolver.py
Config/: DefaultEngine.ini  DefaultGame.ini
Content/: .gitkeep
Source/BitcoinSSD/: BitcoinSSD.Build.cs  BitcoinSSDInterface.cpp  BitcoinSSDInterface.h  GhostMintAudioComponent.cpp  GhostMintAudioComponent.h  GhostMintDashboardHUD.cpp  GhostMintDashboardHUD.h  GhostMintInterface.cpp  GhostMintInterface.h  GhostMintVerseController.verse  GhostMintVolumeRenderer.cpp  GhostMintVolumeRenderer.h  GhostMintWidget.h  launch_dashboard.sh
Source/BitcoinSSD/Private/: BitcoinSSD.cpp  GhostMintWidget.cpp
Source/GhostMintDashboard/: GhostMintDashboardHUD.cpp  GhostMintDashboardHUD.h  GhostMintInterface.cpp  GhostMintInterface.h  GhostMintVerseController.verse
ve_pow/: Cargo.toml
ve_pow/src/: header.rs  main.rs  pow.rs  rpc.rs
