[package]
name = "ve_pow"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = "0.27"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"

[[bin]]
name = "ve_pow"
path = "src/main.rs"
